@@ -3,109 +3,83 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.exception.ObjectNotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
+import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class FilmService {
-
     private final FilmStorage filmStorage;
-    private final UserService userService;
+    private final UserStorage userStorage;
 
     @Autowired
-    public FilmService(FilmStorage filmStorage, UserService userService) {
+    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
         this.filmStorage = filmStorage;
-        this.userService = userService;
+        this.userStorage = userStorage;
     }
 
     public Film createFilm(Film film) {
-        log.debug("Добавление нового фильма: {}", film);
-        return filmStorage.addFilm(film);
+        return filmStorage.createFilm(film);
     }
 
     public Film updateFilm(Film film) {
-        log.debug("Обновление фильма: {}", film);
         return filmStorage.updateFilm(film);
     }
 
     public Film deleteFilm(int id) {
-        Film film = filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
-        filmStorage.deleteFilmById(id);
-        log.debug("Удаление фильма: {}", film);
+        Film film = filmStorage.getFilm(id)
+                .orElseThrow(() -> new ObjectNotFoundException("Movie with id: " + id + " not found"));
+        filmStorage.deleteFilm(id);
+        log.info("Фильм с id = {} был удален", id);
         return film;
     }
 
     public Film getFilm(int id) {
-        log.debug("Фильм с id {} получен", id);
-        return filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
+        return filmStorage.getFilm(id)
+                .orElseThrow(() -> new ObjectNotFoundException("Movie with id: " + id + " not found"));
     }
 
     public Collection<Film> getAllFilms() {
         return filmStorage.getAllFilms();
     }
 
-/*    public Film likeTheFilm(int id, int userId) {
-        Film film = filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
-        if (!film.getLikes().add(userId)) {
-            throw new ValidationException("Пользователь уже поставил лайк этому фильму.");
-        }
+    public Film likeTheFilm(int filmId, int userId) {
+        Film film = filmStorage.getFilm(filmId)
+                .orElseThrow(() -> new ObjectNotFoundException("Movie with id: " + filmId + " not found"));
+
+        userStorage.getUser(userId)
+                .orElseThrow(() -> new ObjectNotFoundException("User with id: " + userId + " not found"));
+
+        film.addLike(userId);
+        log.info("User with id: {} liked the movie with an id: {}", userId, filmId);
         return film;
     }
 
-    public Film removeLike(int id, int userId) {
-        Film film = filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
-        if (!film.getLikes().remove(userId)) {
-            throw new ValidationException("Пользователь не ставил лайк этому фильму.");
-        }
-        return film;
-    }*/
+    public Film removeLike(int filmId, int userId) {
+        Film film = filmStorage.getFilm(filmId)
+                .orElseThrow(() -> new ObjectNotFoundException("Movie with id: " + filmId + " not found"));
 
-    public Film likeTheFilm(int id, int userId) {
-        // Проверяем, существует ли пользователь
-        userService.getUser(userId);
-
-        // Проверяем, существует ли фильм
-        Film film = filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
-
-        if (!film.getLikes().add(userId)) {
-            throw new ValidationException("Пользователь уже поставил лайк этому фильму.");
+        if (userStorage.getUser(userId).isEmpty()) {
+            throw new ObjectNotFoundException("User with id: " + userId + " not found");
         }
 
-        log.info("Пользователь с id {} поставил лайк фильму с id {}", userId, id);
+        film.removeLike(userId);
+        log.info("A like from a user with id: {} was deleted from a movie with id: {}", userId, filmId);
         return film;
     }
 
-    public Film removeLike(int id, int userId) {
-        // Проверяем, существует ли пользователь
-        userService.getUser(userId);
-
-        // Проверяем, существует ли фильм
-        Film film = filmStorage.getFilmById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Фильм с id " + id + " не найден."));
-
-        if (!film.getLikes().remove(userId)) {
-            throw new ValidationException("Пользователь не ставил лайк этому фильму.");
-        }
-
-        log.info("Пользователь с id {} удалил лайк с фильма с id {}", userId, id);
-        return film;
-    }
-
-    public List<Film> getTopOfFilms(int count) {
-        log.debug("Получен список фильмов");
+    public List<Film> getTopOfFilms(Integer count) {
+        log.info("Getting top: {} movies by likes", count);
         return filmStorage.getAllFilms().stream()
-                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
+                .sorted(Comparator.comparingInt((Film f) -> f.getUsersLikes().size()).reversed())
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
