@@ -4,6 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import ru.yandex.practicum.filmorate.controller.FilmController;
 import ru.yandex.practicum.filmorate.exception.ObjectNotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.service.FilmService;
@@ -14,6 +15,7 @@ import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
 
+import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
 import static org.junit.jupiter.api.Assertions.*;
 
 class FilmControllerTest {
@@ -32,16 +34,12 @@ class FilmControllerTest {
         user.setName("Test User");
         user.setEmail("test@example.com");
         user.setBirthday(LocalDate.of(1990, 1, 1));
-        userStorage.addUser(user);
+        userStorage.createUser(user);
     }
 
     @Test
     void createFilmShouldAddFilm() {
-        Film film = new Film();
-        film.setName("Inception");
-        film.setDescription("A mind-bending thriller");
-        film.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film.setDuration(148);
+        Film film = createTestFilm("Inception", "A mind-bending thriller", LocalDate.of(2010, 7, 16), 148);
 
         Film createdFilm = filmController.createFilm(film);
 
@@ -51,22 +49,19 @@ class FilmControllerTest {
     }
 
     @Test
-    void createFilmShouldThrowValidationExceptionIfInvalid() {
-        Film invalidFilm = new Film();
-        invalidFilm.setName(""); // Invalid name
-        invalidFilm.setReleaseDate(LocalDate.of(1800, 1, 1)); // Invalid release date
-        invalidFilm.setDuration(-10); // Invalid duration
+    void createFilmShouldThrowExceptionForInvalidReleaseDate() {
+        Film invalidFilm = createTestFilm("Old Film", "Invalid release date",
+                LocalDate.of(1800, 1, 1), 120);
 
-        assertThrows(Exception.class, () -> filmController.createFilm(invalidFilm));
+        ValidationException exception = assertThrows(ValidationException.class,
+                () -> filmController.createFilm(invalidFilm));
+        assertEquals("The release date cannot be earlier 1895-12-28", exception.getMessage());
     }
 
     @Test
     void updateFilmShouldUpdateExistingFilm() {
-        Film film = new Film();
-        film.setName("Inception");
-        film.setDescription("A mind-bending thriller");
-        film.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film.setDuration(148);
+        Film film = createTestFilm("Inception", "A mind-bending thriller",
+                LocalDate.of(2010, 7, 16), 148);
         Film createdFilm = filmController.createFilm(film);
 
         Film updatedFilm = new Film();
@@ -78,68 +73,43 @@ class FilmControllerTest {
 
         Film result = filmController.updateFilm(updatedFilm);
 
-        assertEquals(createdFilm.getId(), result.getId());
         assertEquals("Interstellar", result.getName());
         assertEquals("A space exploration epic", result.getDescription());
+        assertEquals(LocalDate.of(2014, 11, 7), result.getReleaseDate());
     }
 
     @Test
     void updateFilmShouldThrowExceptionIfFilmNotFound() {
         Film nonExistentFilm = new Film();
-        nonExistentFilm.setId(999); // Non-existent ID
-        nonExistentFilm.setName("Non-existent film");
+        nonExistentFilm.setId(999); // Несуществующий ID
+        nonExistentFilm.setName("Non-existent Film");
+        nonExistentFilm.setDescription("Film not found");
+        nonExistentFilm.setReleaseDate(LocalDate.of(2020, 1, 1));
+        nonExistentFilm.setDuration(100);
 
-        assertThrows(ObjectNotFoundException.class, () -> filmController.updateFilm(nonExistentFilm));
+        ObjectNotFoundException exception = assertThrows(
+                ObjectNotFoundException.class,
+                () -> filmController.updateFilm(nonExistentFilm)
+        );
+
+        assertEquals("Element with id = 999 not found", exception.getMessage());
     }
 
     @Test
     void getFilmShouldReturnFilmById() {
-        Film film = new Film();
-        film.setName("Inception");
-        film.setDescription("A mind-bending thriller");
-        film.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film.setDuration(148);
+        Film film = createTestFilm("Inception", "A mind-bending thriller",
+                LocalDate.of(2010, 7, 16), 148);
         Film createdFilm = filmController.createFilm(film);
 
         Film fetchedFilm = filmController.getFilm(createdFilm.getId());
 
-        assertNotNull(fetchedFilm);
         assertEquals("Inception", fetchedFilm.getName());
     }
 
     @Test
-    void getFilmShouldThrowExceptionIfNotFound() {
-        assertThrows(ObjectNotFoundException.class, () -> filmController.getFilm(999));
-    }
-
-    @Test
-    void getAllFilmsShouldReturnAllFilms() {
-        Film film1 = new Film();
-        film1.setName("Inception");
-        film1.setDescription("A mind-bending thriller");
-        film1.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film1.setDuration(148);
-        filmController.createFilm(film1);
-
-        Film film2 = new Film();
-        film2.setName("Interstellar");
-        film2.setDescription("A space exploration epic");
-        film2.setReleaseDate(LocalDate.of(2014, 11, 7));
-        film2.setDuration(169);
-        filmController.createFilm(film2);
-
-        Collection<Film> allFilms = filmController.getAllFilms();
-
-        assertEquals(2, allFilms.size());
-    }
-
-    @Test
     void deleteFilmShouldRemoveFilm() {
-        Film film = new Film();
-        film.setName("Inception");
-        film.setDescription("A mind-bending thriller");
-        film.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film.setDuration(148);
+        Film film = createTestFilm("Inception", "To be deleted",
+                LocalDate.of(2010, 7, 16), 148);
         Film createdFilm = filmController.createFilm(film);
 
         Film deletedFilm = filmController.deleteFilm(createdFilm.getId());
@@ -149,24 +119,26 @@ class FilmControllerTest {
     }
 
     @Test
-    void likeAndUnlikeFilmShouldUpdateLikes() {
-        Film film = new Film();
-        film.setName("Inception");
-        film.setDescription("A mind-bending thriller");
-        film.setReleaseDate(LocalDate.of(2010, 7, 16));
-        film.setDuration(148);
-        Film createdFilm = filmController.createFilm(film);
-
+    void likeTheFilmShouldAddLike() {
+        Film film = filmController.createFilm(createTestFilm("Inception", "Like test",
+                LocalDate.of(2010, 7, 16), 148));
         int userId = 1;
-        filmController.likeTheFilm(createdFilm.getId(), userId);
 
-        Film likedFilm = filmController.getFilm(createdFilm.getId());
-        assertTrue(likedFilm.getLikes().contains(userId));
+        Film likedFilm = filmController.likeTheFilm(film.getId(), userId);
 
-        filmController.removeLike(createdFilm.getId(), userId);
+        assertTrue(likedFilm.getUsersLikes().contains(userId));
+    }
 
-        Film unlikedFilm = filmController.getFilm(createdFilm.getId());
-        assertFalse(unlikedFilm.getLikes().contains(userId));
+    @Test
+    void removeLikeShouldRemoveLike() {
+        Film film = filmController.createFilm(createTestFilm("Inception", "Like removal test",
+                LocalDate.of(2010, 7, 16), 148));
+        int userId = 1;
+
+        filmController.likeTheFilm(film.getId(), userId);
+        Film unlikedFilm = filmController.removeLike(film.getId(), userId);
+
+        assertFalse(unlikedFilm.getUsersLikes().contains(userId));
     }
 
     @Test
@@ -185,15 +157,15 @@ class FilmControllerTest {
         film2.setDuration(169);
         Film createdFilm2 = filmController.createFilm(film2);
 
-        int userId1 = 1;
-        int userId2 = 2;
         User user2 = new User();
         user2.setLogin("secondUser");
         user2.setName("Second User");
         user2.setEmail("second@example.com");
         user2.setBirthday(LocalDate.of(1992, 2, 2));
-        userStorage.addUser(user2);
+        userStorage.createUser(user2);
 
+        int userId1 = 1;
+        int userId2 = 2;
         filmController.likeTheFilm(createdFilm1.getId(), userId1);
         filmController.likeTheFilm(createdFilm2.getId(), userId1);
         filmController.likeTheFilm(createdFilm2.getId(), userId2);
@@ -201,6 +173,27 @@ class FilmControllerTest {
         List<Film> topFilms = filmController.getTopOfFilms(1);
 
         assertEquals(1, topFilms.size());
-        assertEquals("Interstellar", topFilms.get(0).getName());
+        assertEquals("Interstellar", topFilms.getFirst().getName());
+    }
+
+    @Test
+    void getAllFilmsShouldReturnAllAddedFilms() {
+        filmController.createFilm(createTestFilm("Inception", "Thriller",
+                LocalDate.of(2010, 7, 16), 148));
+        filmController.createFilm(createTestFilm("Interstellar", "Epic",
+                LocalDate.of(2014, 11, 7), 169));
+
+        Collection<Film> allFilms = filmController.getAllFilms();
+
+        assertEquals(2, allFilms.size());
+    }
+
+    private Film createTestFilm(String name, String description, LocalDate releaseDate, int duration) {
+        Film film = new Film();
+        film.setName(name);
+        film.setDescription(description);
+        film.setReleaseDate(releaseDate);
+        film.setDuration(duration);
+        return film;
     }
 }
